@@ -186,7 +186,7 @@ sub put_res {
         foreach my $r (@$res) {
             # Get the source and destination paths for the resource.
             my $src = $r->get_tmp_path || $r->get_path;
-            my $dest = $fs->cat_file($doc_root, $unescape_uri->($r->get_uri));
+            my $dest = $fs->cat_file($doc_root, $unescape_uri->(substr $r->get_uri, 1));
             # Create the destination directory if it doesn't exist and we haven't
             # created it already.
             my $dest_dir = $fs->dir_name($dest);
@@ -294,7 +294,7 @@ sub del_res {
         my $doc_root = $s->get_doc_root;
         foreach my $r (@$res) {
             # Get the name of the file to be deleted.
-            my $file = $fs->cat_file($doc_root, $unescape_uri->($r->get_uri));
+            my $file = $fs->cat_file($doc_root, $unescape_uri->(substr $r->get_uri, 1));
 
             # Get the directory to ls, and the file we are looking for
             my $fn   = $fs->base_name($file);
